Implementando autenticação via Token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.h2.console.path=/h2-console
 # DevTools
 spring.devtools.restart.enabled=true
 
+#JWT
+forum.jwt.expiration=86400000
+forum.jwt.secret=">%Sm^8cUi.u]zNCCkU5E)@:XhpeLr -b)S66 |53^~ows5v4=]3wNIgW=/itqz;mxK]sH}<iZJ%"z-|xi_NIO5z.A;@e)9}U/3,IH+9*/B*fp=0HHPeaPo0&h7*vJNx&$cSFi:cpN`'w?W>h%^YgL
+
